Add another file
file

--- a/js/Another.html
+++ b/js/Another.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Scoala</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>
-    Bun venit la școala!
-    First Commit!
-</h1>
+
 </body>
 </html>
