Revert "Small typo"
This reverts commit 9a9ae2dba1416e5c05f1c6a592715d6bcbe71a12.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Scoala</title>
     <style>
         body{
-            background-image:url("resurse/sc9.jpg");
+            background-image:url("sc9.jpg");
         //background-repeat:no-repeat;
         background-size:1400px 750px;}
         * {
@@ -41,9 +41,9 @@
 </h1>
 <br>
 <table><tr><td width="600" >
-    <div class="zoom" ><img src="resurse/inv.png" width="300" height="350"  onclick="openOnImageClick()"  /></div>
+    <div class="zoom" ><img src="inv.png" width="300" height="350"  onclick="openOnImageClick()"  /></div>
 </td><td width="600">
-    <div class="zoom" ><img src="resurse/copil.png" width="300" height="350"  onclick="openOnImageClick()" /></div></td>
+    <div class="zoom" ><img src="copil.png" width="300" height="350"  onclick="openOnImageClick()" /></div></td>
 </tr>
 </table>
 </body>
