add Memory Game
add memory game

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Scoala</title>
     <style>
         body{
-            background-image:url("sc9.jpg");
+            background-image:url("resurse/sc9.jpg");
         //background-repeat:no-repeat;
         background-size:1400px 750px;}
         * {
@@ -29,7 +29,7 @@
         </style>
     <script type="text/javascript">
         var learn="learning.html";
-        var practice="myHtml.html";
+        var practice="memoryGame.html";
         function openOnImageClick(page)
         {window.open(page);
         }
@@ -43,9 +43,9 @@
 </h1>
 <br>
 <table><tr><td width="600" >
-    <div class="zoom" ><img src="inv.png" width="300" height="350"  onclick="openOnImageClick(learn)"  /></div>
+    <div class="zoom" ><img src="resurse/inv.png" width="300" height="350"  onclick="openOnImageClick(learn)"  /></div>
 </td><td width="600">
-    <div class="zoom" ><img src="copil.png" width="300" height="350"  onclick="openOnImageClick(practice)" /></div></td>
+    <div class="zoom" ><img src="resurse/copil.png" width="300" height="350"  onclick="openOnImageClick(practice)" /></div></td>
 </tr>
 </table>
 </body>
