--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -34,6 +34,7 @@
           <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
         </div>
       </div>
+      <div id="returnBtn" class="arrow" onclick="returnTo()"></div>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
