Added correct path to MazeGame

--- a/games.html
+++ b/games.html
@@ -31,7 +31,7 @@
         var maze="MazeGame/index.html";
         var combine="learning.html";
         function openOnImageClick(page)
-        {window.open(page);
+        {window.location.assign(page); return false;
         }
     </script>
 </head>
