--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         var learn="learning.html";
         var practice="games.html";
         function openOnImageClick(page)
-        {window.open(page);
+        {window.location.assign(page); return false;
         }
     </script>
 </head>
