add sounds in resurse

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         }
 
         </style>
-    <script type="text/javascript">
-        var learn="learning.html";
-        var practice="games.html";
-        function openOnImageClick(page)
-        {window.location.assign(page); return false;
-        }
-    </script>
+
+     <script type="text/javascript">
+    var learn="learning.html";
+    var practice="games.html";
+    function openOnImageClick(page)
+    {window.location.assign(page); return false;
+    }</script>
 </head>
 <body>
 <br>
