--- a/MazeGame/MazeGame.html
+++ b/MazeGame/MazeGame.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>HCI Maze Game</title>
-      <link rel="stylesheet" href="style.css">
+  <title>HCI MazeGame Game</title>
+      <link rel="stylesheet" href="MazeGame.css">
 
   
 </head>
@@ -41,7 +41,7 @@
   </body>
 </html>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js'></script>
-    <script  src="index.js"></script>
+    <script  src="MazeGame.js"></script>
 
 
 
