--- a/OpeningScreen/OpeningScreen.html
+++ b/OpeningScreen/OpeningScreen.html
@@ -5,7 +5,7 @@
     <title>Școala</title>
     <style>
         body{
-            background-image:url("resurse/sc9.jpg");
+            background-image:url("../resurse/other/sc9.jpg");
         //background-repeat:no-repeat;
         background-size:1400px 750px;}
         * {
@@ -29,8 +29,8 @@
         </style>
 
      <script type="text/javascript">
-    var learn="learning.html";
-    var practice="games.html";
+    var learn="../LearningScreen/learning.html";
+    var practice="../GamesScreen/games.html";
     function openOnImageClick(page)
     {window.location.assign(page); return false;
     }</script>
@@ -42,9 +42,9 @@
 </h1>
 <br>
 <table><tr><td width="600" >
-    <div class="zoom" ><img src="resurse/inv.png" width="300" height="350"  onclick="openOnImageClick(learn)"  /></div>
+    <div class="zoom" ><img src="../resurse/other/inv.png" width="300" height="350" onclick="openOnImageClick(learn)"  /></div>
 </td><td width="600">
-    <div class="zoom" ><img src="resurse/copil.png" width="300" height="350"  onclick="openOnImageClick(practice)" /></div></td>
+    <div class="zoom" ><img src="../resurse/other/copil.png" width="300" height="350" onclick="openOnImageClick(practice)" /></div></td>
 </tr>
 </table>
 </body>
