--- a/LearningScreen/learning.html
+++ b/LearningScreen/learning.html
@@ -5,7 +5,7 @@
     <title>Învățare</title>
     <style>
         body{
-            background-image:url("resurse/sc9.jpg");
+            background-image:url("../resurse/other/sc9.jpg");
             background-size:1400px 750px;}
         * {
             box-sizing: border-box;
@@ -33,19 +33,19 @@
 <br>
 <table><tr><td width="500" height="300">
     <div class="zoom" ><video  id="video1" width="400" controls >
-        <source src="resurse/scoala.mp4" type="video/mp4"  > </video></div>
+        <source src="../resurse/other/scoala.mp4" type="video/mp4"  > </video></div>
 </td><td height="300" width="500">
     <div class="zoom" ><video width="400"  controls>
-        <source src="resurse/reguli la scoala.mp4" type="video/mp4"></video></div></td>
+        <source src="../resurse/other/reguli%20la%20scoala.mp4" type="video/mp4"></video></div></td>
 </tr>
 </table>
 <table>
     <tr height="300"><td  width="400"> <div class="zoom" ><video width="270" controls>
-        <source src="resurse/noi suntem scolari.mp4" type="video/mp4"></video></div></td>
+        <source src="../resurse/other/noi%20suntem%20scolari.mp4" type="video/mp4"></video></div></td>
         <td width="400"> <div class="zoom" ><video width="270"  controls>
-            <source src="resurse/noul an scolar.mp4" type="video/mp4"></video></div></td>
+            <source src="../resurse/other/noul%20an%20scolar.mp4" type="video/mp4"></video></div></td>
         <td width="400"> <div class="zoom" ><video width="270"  controls>
-            <source src="resurse/de la 1 pana la 10.mp4" type="video/mp4"></video></div></td>
+            <source src="../resurse/other/de%20la%201%20pana%20la%2010.mp4" type="video/mp4"></video></div></td>
     </tr>
 </table>
 </body>
