Added return Buttons

--- a/GamesScreen/games.html
+++ b/GamesScreen/games.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jocuri</title>
+    <link rel="stylesheet" href="../css/all.css">
     <style>
         body{
             background-image:url("../resurse/other/sc9.jpg");
@@ -47,7 +48,9 @@
             <img src="../resurse/other/inv.png" width="300" height="300" onclick="openOnImageClick(combine)"  /></div></td>
     </tr>
 </table>
+<div id="leftArrowBtn" class="arrow" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></div>
 </body>
 </html>
+<script  src="../js/all.js"></script>
 </body>
 </html>
