--- a/LearningScreen/learning.html
+++ b/LearningScreen/learning.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Învățare</title>
+    <link rel="stylesheet" href="../css/all.css">
     <style>
         body{
             background-image:url("../resurse/other/sc9.jpg");
@@ -48,7 +49,9 @@
             <source src="../resurse/other/de%20la%201%20pana%20la%2010.mp4" type="video/mp4"></video></div></td>
     </tr>
 </table>
+<div id="rightArrowBtn" class="arrow" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></div>
 </body>
 </html>
+<script  src="../js/all.js"></script>
 </body>
 </html>
