--- a/MazeGame/MazeGame.html
+++ b/MazeGame/MazeGame.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>HCI MazeGame Game</title>
-      <link rel="stylesheet" href="MazeGame.css">
+    <meta charset="UTF-8">
+    <title>HCI MazeGame Game</title>
+    <link rel="stylesheet" href="MazeGame.css">
+    <link rel="stylesheet" href="../css/all.css">
 
-  
+
 </head>
 
 <body>
 
-  <html lang="en-GB">
+<html lang="en-GB">
 <head>
-  <meta charset="utf-8">
-  <body>
-    <div id="gradient"></div>
-    <div id="page">
-      <div id="Message-Container">
+    <meta charset="utf-8">
+<body>
+<div id="gradient"></div>
+<div id="page">
+    <div id="Message-Container">
         <div id="message">
-          <h1>Felicitari!</h1>
-          <p>Ai ajuns la școală.</p>
-          <p id="moves"></p>
-          <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container'); makeMaze()" value="Din nou!" />
+            <h1>Felicitari!</h1>
+            <p>Ai ajuns la școală.</p>
+            <p id="moves"></p>
+            <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container'); makeMaze()"
+                   value="Din nou!"/>
         </div>
-      </div>
-      <div id="menu">
-
-        <input id="startMazfeBtn" type="button" onclick="makeMaze()" value="Start" />
-      </div>
-      <div id="view">
-        <div id="mazeContainer">
-          <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
-        </div>
-      </div>
-      <div id="returnBtn" class="arrow" onclick="returnTo()"></div>
     </div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
-  </body>
+    <div id="menu">
+
+        <input id="startMazfeBtn" type="button" onclick="makeMaze()" value="Start"/>
+    </div>
+    <div id="view">
+        <div id="mazeContainer">
+            <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
+        </div>
+    </div>
+    <div id="leftArrowBtn" class="arrow" onclick="returnTo('../GamesScreen/games.html')"></div>
+</div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
+</body>
 </html>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js'></script>
-    <script  src="MazeGame.js"></script>
-
-
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js'></script>
+<script src="MazeGame.js"></script>
+<script  src="../js/all.js"></script>
 
 
 </body>
