--- a/MemoryGame/memoryGame.html
+++ b/MemoryGame/memoryGame.html
@@ -5,6 +5,7 @@
 
     <title>Perechi</title>
     <link rel="stylesheet" href="memoryGame.css">
+    <link rel="stylesheet" href="../css/all.css">
 </head>
 <body>
 <section class="memory-game">
@@ -62,8 +63,10 @@
         <img class="back-face" src="../resurse/other/ang.svg" alt="JS Badge" />
     </div>
 </section>
+<div id="leftArrowBtn" class="arrow" onclick="returnTo('../GamesScreen/games.html')"></div>
 <button id ="myBtn" class="myBtn" onclick="myFunction()">Next</button>
 
 <script src="memoryGame.js"></script>
+<script  src="../js/all.js"></script>
 </body>
 </html>
