--- a/GamesScreen/games.html
+++ b/GamesScreen/games.html
@@ -45,7 +45,7 @@
         <td width="400"> <div class="zoom" >
             <img src="../resurse/other/maze.png" width="300" height="300" onclick="openOnImageClick(maze)"  /></div></td>
         <td width="400"> <div class="zoom" >
-            <img src="../resurse/other/inv.png" width="300" height="300" onclick="openOnImageClick(combine)"  /></div></td>
+            <img src="../resurse/other/selection.png" width="300" height="300" onclick="openOnImageClick(combine)"  /></div></td>
     </tr>
 </table>
 <div id="leftArrowBtn" class="arrow" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></div>
