--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>title</title>
     <link rel="stylesheet" type="text/css" href="SelectGame.css">
+    <link rel="stylesheet" href="../css/all.css">
 </head>
 <div id="gradient"></div>
 <div class="container">
@@ -13,7 +14,9 @@
 </div>
 <img class="button" src="icons/buttons.png" id="check" alt=""/>
 <img class="button" src="icons/speaker.png" id="speaker" alt=""/>
+<div id="leftArrowBtn" class="arrow2" onclick="returnTo('../GamesScreen/games.html')"></div>
 <script src="SelectGame.js"></script>
+<script  src="../js/all.js"></script>
 
 </body>
 </html>
