--- a/GamesScreen/games.html
+++ b/GamesScreen/games.html
@@ -30,7 +30,7 @@
     <script type="text/javascript">
         var memory="../MemoryGame/memoryGame.html";
         var maze="../MazeGame/MazeGame.html";
-        var combine="../LearningScreen/learning.html";
+        var combine="../SelectGame/SelectGame.html";
         function openOnImageClick(page)
         {window.location.assign(page); return false;
         }
