Adjusted maze difficulty and modified return buttons

--- a/GamesScreen/games.html
+++ b/GamesScreen/games.html
@@ -48,9 +48,10 @@
             <img src="../resurse/other/selection.png" width="300" height="300" onclick="openOnImageClick(combine)"  /></div></td>
     </tr>
 </table>
-<div id="leftArrowBtn" class="arrow" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></div>
+<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></i>
 </body>
 </html>
 <script  src="../js/all.js"></script>
+<script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
