--- a/LearningScreen/learning.html
+++ b/LearningScreen/learning.html
@@ -74,9 +74,10 @@
             <source src="../resurse/other/de%20la%201%20pana%20la%2010.mp4" type="video/mp4"></video></div></td>
     </tr>
 </table>
-<div id="rightArrowBtn" class="arrow" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></div>
+<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></i>
 </body>
 </html>
 <script  src="../js/all.js"></script>
+<script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
