--- a/MemoryGame/memoryGame.html
+++ b/MemoryGame/memoryGame.html
@@ -64,9 +64,10 @@
     </div>
 </section>
 <div id="leftArrowBtn" class="arrow" onclick="returnTo('../GamesScreen/games.html')"></div>
-<button id ="myBtn" class="myBtn" onclick="myFunction()">Next</button>
+<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="myFunction()">Next</i>
 
 <script src="memoryGame.js"></script>
 <script  src="../js/all.js"></script>
+<script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
