--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -9,14 +9,13 @@
 <div id="gradient"></div>
 <div class="container">
     <div class="overlay">
-    <div class="imgs" id="imgs"></div>
+        <div class="imgs" id="imgs"></div>
     </div>
 </div>
-<img class="button" src="icons/buttons.png" id="check" alt=""/>
 <img class="button" src="icons/speaker.png" id="speaker" alt=""/>
-<div id="leftArrowBtn" class="arrow2" onclick="returnTo('../GamesScreen/games.html')"></div>
+<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
 <script src="SelectGame.js"></script>
-<script  src="../js/all.js"></script>
-
+<script src="../js/all.js"></script>
+<script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
