Renamed some files

--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="SelectGameTest.css">
+    <link rel="stylesheet" href="SelectGame.css">
 </head>
 <body>
 <div class="container">
@@ -13,5 +13,5 @@
 
 </div>
 </body>
-<script src="SelectGameTest.js"></script>
+<script src="SelectGame.js"></script>
 </html>
