--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="SelectGame.css">
 </head>
 <body>
-<div class="container">
+<div class="container" id="container">
     <div class="row" id="firstRow"></div>
     <div class="row" id="secondRow"></div>
     <div class="row" id="thirdRow"></div>
-
 </div>
+<img class="button" src="icons/speaker.png" id="speaker" alt=""/>
 </body>
 <script src="SelectGame.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html>
+
+
+
