--- a/TRASH/trash.html
+++ b/TRASH/trash.html
@@ -14,7 +14,7 @@
 </div>
 <img class="button" src="icons/speaker.png" id="speaker" alt=""/>
 <i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
-<script src="SelectGame.js"></script>
+<script src="trash.js"></script>
 <script src="../js/all.js"></script>
 <script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
 </body>
