--- a/OpeningScreen/OpeningScreen.html
+++ b/OpeningScreen/OpeningScreen.html
@@ -5,7 +5,7 @@
     <title>Școala</title>
     <style>
         body{
-            background-image:url("../resurse/other/sc9.jpg");
+            background-image:url("../resurse/other/school_bg.png");
         //background-repeat:no-repeat;
         background-size:1400px 750px;}
         * {
@@ -49,15 +49,13 @@
 <audio id='mySound'><source src='../resurse/sounds/învăţăm.m4a'></audio>
 <audio id='mySound2'><source src='../resurse/sounds/ne%20jucăm.m4a'></audio>
 <br>
-<h1 style="text-align:center;font-family: verdana;color:darkslategrey;background: white">
-    Bun venit la școală!
-</h1>
 <br>
-<table><tr><td width="600" >
-    <div class="zoom" ><img src="../resurse/other/inv.png" width="300" height="350" onclick="openOnImageClick(learn)"  onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"/>
+</table>
+<table><tr><td  width="300" width="500" >
+    <div class="zoom" ><img src="../resurse/other/minion.png" width="300" height="350" onclick="openOnImageClick(learn)"  onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"/>
       </div>
-</td><td width="600">
-    <div class="zoom" ><img src="../resurse/other/copil.png" width="300" height="350" onclick="openOnImageClick(practice)" onmouseover="PlaySound('mySound2')" onmouseout="StopSound('mySound2')"/></div></td>
+<td/><td width="100"></td><td height="500" width="700">
+    <div class="zoom" ><img src="../resurse/other/bus1.png" width="500" height="350" onclick="openOnImageClick(practice)" onmouseover="PlaySound('mySound2')" onmouseout="StopSound('mySound2')"/></div></td>
 </tr>
 </table>
 </body>
