--- a/LearningScreen/learning.html
+++ b/LearningScreen/learning.html
@@ -41,7 +41,7 @@
 <i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></i>
 <center>
     <video  id="video1" width="1000" height="600"  autoplay muted="true">
-        <source src="../resurse/other/invatare.mp4" type="video/mp4"  > </video>
+        <source src="../resurse/other/scoala.mp4" type="video/mp4"  > </video>
 
 </center>
 </body>
