--- a/GamesScreen/games.html
+++ b/GamesScreen/games.html
@@ -48,8 +48,8 @@
 </head>
 <body>
 <audio id='mySound'><source src='../resurse/sounds/jocul%20cu%20perechi.m4a'></audio>
-<audio id='mySound2'><source src='../resurse/sounds/învăţăm.m4a'></audio>
-<audio id='mySound3'><source src='../resurse/sounds/învăţăm.m4a'></audio>
+<audio id='mySound2'><source src='../resurse/sounds/jocul%20cu%20labirint.m4a'></audio>
+<audio id='mySound3'><source src='../resurse/sounds/jocul%20de%20ales%20oboecte.m4a'></audio>
 <br>
 <br>
 <table>
