--- a/LearningScreen/learning.html
+++ b/LearningScreen/learning.html
@@ -40,8 +40,8 @@
 <br>
 <i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../OpeningScreen/OpeningScreen.html')"></i>
 <center>
-    <video  id="video1" width="1000" height="600"  autoplay muted="true">
-        <source src="../resurse/other/scoala.mp4" type="video/mp4"  > </video>
+    <video  id="video1" width="1000" height="600" controls>
+        <source src="../resurse/other/invata.mp4" type="video/mp4"  > </video>
 
 </center>
 </body>
