--- a/OpeningScreen/OpeningScreen.html
+++ b/OpeningScreen/OpeningScreen.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <audio id='mySound'><source src='../resurse/sounds/învăţăm.m4a'></audio>
-<audio id='mySound2'><source src='../resurse/sounds/ne%20jucăm.m4a'></audio>
+<audio id='mySound2'><source src='../resurse/sounds/ne_jucăm.m4a'></audio>
 <br>
 <br>
 </table>
