--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -12,6 +12,7 @@
     <div class="row" id="thirdRow"></div>
 </div>
 <img class="button" src="icons/speaker.png" id="speaker" alt=""/>
+<audio id="foobar" src="../resurse/sounds/cerinta1.m4a" preload="auto">
 </body>
 <script src="SelectGame.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
