--- a/GamesScreen/games.html
+++ b/GamesScreen/games.html
@@ -47,9 +47,9 @@
     </script>
 </head>
 <body>
-<audio id='mySound'><source src='../resurse/sounds/jocul%20cu%20perechi.m4a'></audio>
-<audio id='mySound2'><source src='../resurse/sounds/jocul%20cu%20labirint.m4a'></audio>
-<audio id='mySound3'><source src='../resurse/sounds/jocul%20de%20ales%20oboecte.m4a'></audio>
+<audio id='mySound'><source src='../resurse/sounds/jocul_cu_perechi.m4a'></audio>
+<audio id='mySound2'><source src='../resurse/sounds/jocul_cu_labirint.m4a'></audio>
+<audio id='mySound3'><source src='../resurse/sounds/jocul_de_ales_obiecte.m4a'></audio>
 <br>
 <br>
 <table>
