--- a/MemoryGame/memoryGame.html
+++ b/MemoryGame/memoryGame.html
@@ -64,7 +64,7 @@
     </div>
 </section>
 <div id="leftArrowBtn" class="arrow" onclick="returnTo('../GamesScreen/games.html')"></div>
-<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="myFunction()">Next</i>
+<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
 
 <script src="memoryGame.js"></script>
 <script  src="../js/all.js"></script>
