--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Jocul De Selectie</title>
     <link rel="stylesheet" href="SelectGame.css">
+    <link rel="stylesheet" href="../css/all.css">
 </head>
 <body>
 <div class="container" id="container">
@@ -11,11 +12,14 @@
     <div class="row" id="secondRow"></div>
     <div class="row" id="thirdRow"></div>
 </div>
-<img class="button" src="icons/speaker.png" id="speaker" alt=""/>
+<img class="button" src="../resurse/icons/speaker.png" id="speaker" alt=""/>
+<i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
 <audio id="foobar" src="../resurse/sounds/cerintaSunetS1.m4a" preload="auto"></audio>
 </body>
 <script src="SelectGame.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
+<script  src="../js/all.js"></script>
 </html>
 
 
