--- a/MazeGame/MazeGame.html
+++ b/MazeGame/MazeGame.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HCI MazeGame Game</title>
+    <title>Jocul Labirint</title>
     <link rel="stylesheet" href="MazeGame.css">
     <link rel="stylesheet" href="../css/all.css">
 </head>
@@ -33,6 +33,8 @@
     </div>
 </div>
 <i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
+<img class="button" src="../resurse/icons/speaker.png" id="speaker" alt=""/>
+<audio id="foobar" src="../resurse/sounds/cerintaMaze.m4a" preload="auto"></audio>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript"
