--- a/MemoryGame/memoryGame.html
+++ b/MemoryGame/memoryGame.html
@@ -65,6 +65,9 @@
 </section>
 <div id="leftArrowBtn" class="arrow" onclick="returnTo('../GamesScreen/games.html')"></div>
 <i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
+<img class="button" src="../resurse/icons/speaker.png" id="speaker" alt=""/>
+<audio id="foobar" src="../resurse/sounds/cerintaPerechi.m4a" preload="auto"></audio>
+
 
 <script src="memoryGame.js"></script>
 <script  src="../js/all.js"></script>
