--- a/WordsGame/WordsGame.html
+++ b/WordsGame/WordsGame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jocul De Selectie</title>
-    <link rel="stylesheet" href="SelectGame.css">
+    <link rel="stylesheet" href="WordsGame.css">
     <link rel="stylesheet" href="../css/all.css">
 </head>
 <body>
@@ -14,10 +14,9 @@
 </div>
 <img class="button" src="../resurse/icons/speaker.png" id="speaker" alt=""/>
 <i class="fas fa-arrow-alt-circle-left" type="button" id="returnBtn" onclick="returnTo('../GamesScreen/games.html')"></i>
-<i class="fas fa-arrow-right" type="button" id="nextBtn" onclick="returnTo('../WordsGame/WordsGame.html')"></i>
-<audio id="foobar" src="../resurse/sounds/cerintaSunetS1.m4a" preload="auto"></audio>
+<audio id="foobar" src="../resurse/sounds/cerintaSunetS2.m4a" preload="auto"></audio>
 </body>
-<script src="SelectGame.js"></script>
+<script src="WordsGame.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/9c9757ddb3.js" crossorigin="anonymous"></script>
 <script  src="../js/all.js"></script>
