--- a/OpeningScreen/OpeningScreen.html
+++ b/OpeningScreen/OpeningScreen.html
@@ -52,7 +52,7 @@
 <br>
 </table>
 <table><tr><td  width="300" width="500" >
-    <div class="zoom" ><img src="../resurse/other/minion.png" width="300" height="350" onclick="openOnImageClick(learn)"  onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"/>
+    <div class="zoom" ><img src="../resurse/other/mini.png" width="300" height="350" onclick="openOnImageClick(learn)"  onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"/>
       </div>
 <td/><td width="100"></td><td height="500" width="700">
     <div class="zoom" ><img src="../resurse/other/bus1.png" width="500" height="350" onclick="openOnImageClick(practice)" onmouseover="PlaySound('mySound2')" onmouseout="StopSound('mySound2')"/></div></td>
