--- a/SelectGame/SelectGame.html
+++ b/SelectGame/SelectGame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<img lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Jocul De Selectie</title>
@@ -23,6 +23,7 @@
 <script src="SelectGame.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script  src="../js/all.js"></script>
+
 </html>
 
 
