Added Restart Button To Maze Game

--- a/MazeGame/MazeGame.html
+++ b/MazeGame/MazeGame.html
@@ -21,8 +21,8 @@
         <div id="message">
             <h1>Felicitari!</h1>
             <p>Ai ajuns la școală.</p>
-            <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container'); makeMaze()"
-                   value="Din nou!"/>
+            <i class="fas fa-redo" id="okBtn"  onclick="toggleVisablity('Message-Container'); makeMaze()"></i>
+
         </div>
     </div>
     <div id="menu">
